# WebShapp

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
ForCodex/: Test.py
agents/: drift_agent.yaml  explain_agent.yaml  retrain_agent.yaml  tools.py  watcher_agent.yaml
app/: __init__.py  cli.py  config.py  main.py  models.py  service_layer.py
app/services/: game_engine.py  parquet_loader.py  shap_adapter.py
backend/: app.py  cache.py  deps.py  queries.py  schemas.py  ws.py
backend/routers/: games.py  shap.py  winprob.py
backend/workers/: __init__.py  drift.py  reporter.py  retrain.py  scheduler.py  watcher.py
engine/: feature_reg.py  meta_model.py  shap_utils.py
fixtures/: sample_game.parquet
infra/: docker-compose.yml  prometheus.yml
scripts/: bench_latency.py  demo_packets.jsonl  seed_demo.py
tests/: test_e2e.py  test_meta_model.py
webapp/: index.html  package.json  tsconfig.json  vite.config.ts
webapp/src/: main.tsx  sockets.ts  types.ts
webapp/src/components/: GameStateStrip.tsx  LiveWinChart.tsx  ShapDeltaBars.tsx
webapp/src/pages/: LiveWinDashboard.tsx
